--- a/public/guides.html
+++ b/public/guides.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>QMUN</title>
-    <meta property="og:title" content="QMUN">
+    <meta property="og:title" content="Background Guides - QMUN">
     <meta name="twitter:title" content="QMUN 2021">
 
     <meta property="og:url" content="" />
@@ -29,33 +29,9 @@
     <meta property="og:image" content="https://emojipedia-us.s3.amazonaws.com/thumbs/120/facebook/138/flag-for-united-nations_1f1fa-1f1f3.png" />
   </head>
   <body>
-
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
-
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyCK_r3i6bZvRVW_dNOMXKhS563Pf_aqEps",
-    authDomain: "qmun2021.firebaseapp.com",
-    databaseURL: "https://qmun2021.firebaseio.com",
-    projectId: "qmun2021",
-    storageBucket: "qmun2021.appspot.com",
-    messagingSenderId: "776859144464",
-    appId: "1:776859144464:web:e2ecaa3903a21416edd595",
-    measurementId: "G-8S18Z87KZ6"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
