--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#5b92e5">
     <meta name="google-site-verification" content="rzSQqMMLF20myNx7aEX7HRTTdp1LFOw3m40OJKaXE9U" />
@@ -20,13 +21,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>QMUN</title>
-    <meta property="og:title" content="QMUN">
+    <title>QMUN 2021</title>
+    <meta property="og:title" content="QMUN 2021">
     <meta name="twitter:title" content="QMUN 2021">
 
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://qmun2021.web.app/" />
 
     <meta property="og:image" content="https://emojipedia-us.s3.amazonaws.com/thumbs/120/facebook/138/flag-for-united-nations_1f1fa-1f1f3.png" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous"> -->
   </head>
   <body>
 
